# Langvel

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  FEATURES.md  FIXED_MCP_ISSUES.txt  INSTALL.md  LANGSMITH_SETUP.md  LARAVEL_COMPARISON.md  LICENSE  MCP_DEADLOCK_FIX_SUMMARY.md  QUICKSTART.md  README.md  TODOS.md  pyproject.toml  setup.py
app/agents/: advanced_workflow_agent.py  code_review_agent.py  customer_support_agent.py  fluent_example.py  memory_agent.py  simpletest.py
config/: langvel.py
docs/: FLUENT_API.md  LLM_GUIDE.md  MCP_DEADLOCK_DIAGRAM.md  MCP_FIXES.md
examples/: customer_support_agent.py
langvel/: logging.py  server.py
langvel/auth/: decorators.py  manager.py
langvel/cli/: main.py
langvel/core/: agent.py
langvel/llm/: __init__.py  manager.py
langvel/mcp/: manager.py
langvel/memory/: README.md  __init__.py  episodic.py  manager.py  semantic.py  working.py
langvel/middleware/: base.py  manager.py
langvel/multiagent/: __init__.py  communication.py  coordinator.py
langvel/observability/: __init__.py  tracer.py
langvel/rag/: manager.py
langvel/routing/: builder.py  fluent.py  router.py
langvel/state/: base.py  checkpointers.py
langvel/tools/: decorators.py  registry.py
routes/: agent.py
tests/: test_setup.py
tests/unit/: test_agent_path_validation.py  test_agent_pooling.py  test_auth_jwt_secret.py  test_jwt_secret_simple.py  test_mcp_deadlock_fix.py  test_rate_limiter.py  test_request_size_limit.py  test_request_timeout.py  test_server_error_handling.py
